37 Networkpolicy/allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-server
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: client
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            run: server
      ports:
        - protocol: TCP
          port: 80
